@@ -178,7 +178,9 @@ class WC_REST_Stripe_Locations_Controller extends WC_Stripe_REST_Base_Controller
 	 * @param WP_REST_Request $request Full data about the request.
 	 */
 	public function get_store_location( $request ) {
-		$name          = get_bloginfo();
+		// Originally `get_bloginfo` was used for location name, later switched to `site_url` as the former may be blank.
+		$store_hostname = str_replace( [ 'https://', 'http://' ], '', get_site_url() );
+		$possible_names = [ get_bloginfo(), $store_hostname ];
 		$store_address = WC()->countries;
 		$address       = array_filter(
 			[
@@ -213,7 +215,7 @@ class WC_REST_Stripe_Locations_Controller extends WC_Stripe_REST_Base_Controller
 		try {
 			foreach ( $this->fetch_locations() as $location ) {
 				if (
-					$location->display_name === $name
+					in_array( $location->display_name, $possible_names, true )
 					&& count( array_intersect( (array) $location->address, $address ) ) === count( $address )
 				) {
 					return rest_ensure_response( $location );
@@ -223,7 +225,7 @@ class WC_REST_Stripe_Locations_Controller extends WC_Stripe_REST_Base_Controller
 			// Create new location if no location matches display name and address.
 			$response = WC_Stripe_API::request(
 				[
-					'display_name' => $name,
+					'display_name' => $store_hostname,
 					'address'      => $address,
 				],
 				'terminal/locations'
